[gd_scene load_steps=24 format=2]

[ext_resource path="res://3dCC.gd" type="Script" id=1]
[ext_resource path="res://crosshair_material.tres" type="Material" id=2]
[ext_resource path="res://Working Textures/comphair.png" type="Texture" id=3]
[ext_resource path="res://Working Textures/leafs.png" type="Texture" id=4]
[ext_resource path="res://Visible HUD.gd" type="Script" id=5]
[ext_resource path="res://Real Textures/Wheat.png" type="Texture" id=6]
[ext_resource path="res://Real Textures/meter.png" type="Texture" id=7]
[ext_resource path="res://Working Textures/fakeloader.jpg" type="Texture" id=8]
[ext_resource path="res://Sounds/Death.mp3" type="AudioStream" id=9]
[ext_resource path="res://Sounds/Player Footstep.mp3" type="AudioStream" id=10]
[ext_resource path="res://Sounds/Leaf Rustle.mp3" type="AudioStream" id=11]
[ext_resource path="res://Materials/Fonter.tres" type="DynamicFont" id=12]

[sub_resource type="CapsuleShape" id=4]
radius = 0.469099
height = 1.09348

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.5

[sub_resource type="Theme" id=5]

[sub_resource type="Animation" id=10]
resource_name = "Death"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.428, -17.141 ), Vector3( 0, -0.996, -0.56 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUD/ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arrow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HUD/ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HUD/Meter:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HUD/Splash:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.3, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Opened"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/Label2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.427512, -10.5192 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUD/ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arrow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HUD/ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HUD/Meter:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HUD/Splash:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HUD/Label2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "lvlend"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/Splash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "lvlstart"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/Splash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.31452, 0.328562, 0.99339 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.380392, 0.266667, 0, 1 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.764706, 0.764706, 0.764706, 1 )

[node name="3dCC" type="KinematicBody"]
script = ExtResource( 1 )
move_speed = 8
acceleration = 1.1
friction = 1.34

[node name="Hitbox" type="Area" parent="." groups=["player"]]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.25, 0 )
collision_layer = 24
collision_mask = 24

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04583e-08, -0.239258 )
shape = SubResource( 4 )

[node name="UpperCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.25, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="UpperCollider"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -1.09278e-08, 0.25 )
current = true
far = 2462.6

[node name="RayCast" type="RayCast" parent="UpperCollider/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -500 )

[node name="LowerCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.25, 0 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="HUD" type="Control" parent="."]
visible = false
margin_right = 1922.0
margin_bottom = 1071.0
script = ExtResource( 5 )

[node name="Crosshair" type="ColorRect" parent="HUD"]
visible = false
material = ExtResource( 2 )
margin_left = -2.0
margin_top = -1.0
margin_right = 1918.0
margin_bottom = 1079.0

[node name="CrossHair" type="Sprite" parent="HUD"]
position = Vector2( 969, 511 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Hidden" type="Sprite" parent="HUD"]
visible = false
position = Vector2( 959, 538.5 )
scale = Vector2( 1.00729, 1.00648 )
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="HUD"]
visible = false
margin_left = 730.0
margin_top = 257.0
margin_right = 1222.0
margin_bottom = 478.0

[node name="Sprite" type="Sprite" parent="HUD"]
position = Vector2( 92, 961 )
scale = Vector2( 0.18925, 0.18925 )
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="HUD"]
margin_left = 878.32
margin_top = 585.012
margin_right = 1078.32
margin_bottom = 625.012
rect_min_size = Vector2( 0, 40 )
theme = SubResource( 5 )
color = Color( 1, 0.0745098, 0.0745098, 1 )

[node name="Meter" type="Sprite" parent="HUD"]
position = Vector2( 969, 617.006 )
scale = Vector2( 0.27, 0.330012 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="HUD"]
margin_left = 180.0
margin_top = 913.0
margin_right = 398.0
margin_bottom = 1053.0
custom_fonts/font = ExtResource( 12 )
text = "0"

[node name="ColorRect2" type="ColorRect" parent="HUD"]
visible = false
margin_right = 1924.0
margin_bottom = 1087.0
color = Color( 0.278431, 0, 0, 0.364706 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
root_node = NodePath("../..")
anims/Death = SubResource( 10 )
anims/Opened = SubResource( 14 )
anims/RESET = SubResource( 11 )
anims/lvlend = SubResource( 13 )
anims/lvlstart = SubResource( 12 )

[node name="Label2" type="Label" parent="HUD"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -946.5
margin_top = 62.0
margin_right = 946.5
margin_bottom = 202.0
custom_fonts/font = ExtResource( 12 )
text = "The Gate Hath Opened"
align = 1

[node name="Splash" type="Sprite" parent="HUD"]
position = Vector2( 959, 533 )
scale = Vector2( 2.63462, 2.62439 )
texture = ExtResource( 8 )

[node name="DeathSound" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource( 9 )

[node name="BushGetter" type="Area" parent="." groups=["player"]]

[node name="CollisionShape" type="CollisionShape" parent="BushGetter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0105966, -0.26245, 0 )
shape = SubResource( 3 )

[node name="Hands" type="Area" parent="." groups=["hands"]]

[node name="CollisionShape" type="CollisionShape" parent="Hands"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0448797, 0.514401, -1.00099 )
shape = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="."]
light_color = Color( 0.870588, 0.666667, 0.529412, 1 )
light_energy = 0.6
omni_range = 10.0
omni_attenuation = 2.46229

[node name="Arrow" type="CSGCombiner" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.427512, -10.5192 )
visible = false

[node name="CSGCylinder" type="CSGCylinder" parent="Arrow"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.29598, 0 )
radius = 0.0134815
material = SubResource( 8 )

[node name="CSGCylinder2" type="CSGCylinder" parent="Arrow/CSGCylinder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.611949, -2.67491e-08 )
radius = 0.0335401
height = 0.361132
cone = true
material = SubResource( 9 )

[node name="CSGCylinder2" type="CSGCylinder" parent="Arrow"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.29737, -0.526745 )
radius = 0.0626368
height = 0.140206
cone = true
material = SubResource( 9 )

[node name="Footstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="Rustler" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="animation_finished" from="HUD/AnimationPlayer" to="HUD" method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="BushGetter" to="." method="_on_BushGetter_area_entered"]
[connection signal="area_exited" from="BushGetter" to="." method="_on_BushGetter_area_exited"]
